; ModuleID = '/home/carl/AnghaBench/libui/unix/extr_OLD_table.c_textEdited.c'
source_filename = "/home/carl/AnghaBench/libui/unix/extr_OLD_table.c_textEdited.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tablePart = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*, i64)* @textEdited to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @textEdited(i32* %0, i32* %1, i32* %2, i64 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.tablePart*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i64 %3, i64* %8, align 8
  %10 = load i64, i64* %8, align 8
  %11 = inttoptr i64 %10 to %struct.tablePart*
  store %struct.tablePart* %11, %struct.tablePart** %9, align 8
  %12 = load %struct.tablePart*, %struct.tablePart** %9, align 8
  %13 = load %struct.tablePart*, %struct.tablePart** %9, align 8
  %14 = getelementptr inbounds %struct.tablePart, %struct.tablePart* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32*, i32** %6, align 8
  %17 = load i32*, i32** %7, align 8
  %18 = call i32 @onEdited(%struct.tablePart* %12, i32 %15, i32* %16, i32* %17)
  ret void
}

declare dso_local i32 @onEdited(%struct.tablePart*, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
